--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,57 @@
-h1 {
-    color: red;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+.container{
+    background-color: #333;
+    color: #eee;
+    width: 80%;
+    box-sizing: border-box;
+    margin : auto;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 1%;
+    margin-top : 35px;
+    border-top: 6px solid yellow;
+}
+.main-aside h2{
+    text-align: center;
+}
+.main-aside ul {
+    list-style: none;
+    text-align: center;
+    padding : 0;
+}
+.main-aside ul a {
+    text-decoration: none;
+    color: black;
+}
+.main-aside ul a:hover{
+    color:red;
+}
+.main-aside ul a:visited{
+    color : green;
+}
+
+
+
+.main-form {
+    padding-left: 8%;
+
+}
+.main-form .form-group {
+    padding-bottom: 10px;
+}
+.main-form .form-group input{
+    padding: 10px;
+}
+
+.main-form .form-group label {
+    display: block;
+}
+
+.button {
+    padding: 15px;
+    background-color: ;
 }
