--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
+    margin: 0;
+    background-color: #CACACA;
 }
 
 .container{
@@ -14,6 +16,31 @@ body {
     padding-bottom: 1%;
     margin-top : 35px;
     border-top: 6px solid yellow;
+}
+.container-2 {
+    color: black;
+    font-weight: bold;
+    width: 80%;
+    box-sizing: border-box;
+    margin : auto;
+    padding-top: 1%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 1%;
+    margin-top : 70px;
+    border-top: 2px solid black;
+}
+.fixed {
+    font-family: serif;
+    font-weight: bold;
+    color: yellow;
+    font-size: 30px;
+    position: sticky;
+    margin: auto;
+    width: auto;
+    top: 10px;
+    left: 60px;
+   
 }
 .main-aside h2{
     text-align: center;
@@ -45,6 +72,8 @@ body {
 }
 .main-form .form-group input{
     padding: 10px;
+    width: 80%;
+    
 }
 
 .main-form .form-group label {
@@ -53,5 +82,64 @@ body {
 
 .button {
     padding: 15px;
-    background-color: ;
+    background-color: #333;
+    color: #eee;
+    border : none;
+
 }
+.box {
+    width : 80%;
+    margin: auto;
+}
+.main-form .form-group textarea {
+    width: 40%;
+}
+
+
+.relative {
+    position: relative;
+    width: 50%;
+    border: 3px solid #333;
+    height: 500px;
+    margin-bottom: 50px;
+    border-radius: 7px;
+}
+
+.relative .absolute {
+    position: absolute;
+    bottom: 0;
+}
+.relative .absolute h1{
+    margin: 0;
+}
+
+#main-navbar {
+    background: rgb(0, 0, 0);
+    color: #eee;
+    padding: 15px;
+    text-align: center;
+    margin-bottom: 10px;
+    position: sticky;
+    top: 0;
+}
+.fixed-button {
+    background-color: #333;
+    padding: 5px;
+    position: fixed;
+    top: 90%;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    right: 10px;
+    bottom: 100px;
+    margin : 20px;
+}
+
+.categories ul {
+    list-style: none; 
+
+}
+.categories ul li:first-child {
+    color: red;
+}
+
